--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -113,13 +113,6 @@ While recent research emphasizes a key role of interoception in a variety of pro
 Various measures of interoception have been developed (see **@fig-measures**), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking vs. questionnaires and subjective scales involving a metacognitive reflection), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness).
 While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
 
-<!-- self-reports -->
-
-For instance, while the use of self-reports questionnaires to measure an embodied function might seem paradoxical, recent redefinitions of interoception, emphasizing the role of high-level and metacognitive elaboration of interoceptive information, has provided the theoretical grounding to support the idea that some facets of interoception (including participants' metacognitive beliefs) can be assessed subjectively, providing useful and interesting measures [@murphy2019] [**TODO: also cite the most recent paper**]. 
-The notion that self-reports might not reflect the same processes as other interoception measures is important to contextualize the apparent lack of convergence between measures in the field **(REF)**. 
-Still, a better understanding of what is being measured with different questionnaires and dimensions, as well their potential overlaps with other constructs (e.g., alexithymia, body awareness) is needed to clarify the role of self-reports in the assessment of interoception.
-
-
 ```{r}
 #| label: "fig-measures"
 #| fig-cap: "Different ways in which interoception can be measured."
@@ -128,13 +121,17 @@ knitr::include_graphics("figures/measuring_interoception.png")
 ```
 
 
-<!-- TODO: replace with a code chunk that allows for legend -->
+<!-- self-reports -->
+
+For instance, while the use of self-reports questionnaires to measure an embodied function might seem paradoxical, recent redefinitions of interoception, emphasizing the role of high-level and metacognitive elaboration of interoceptive information, has provided the theoretical grounding to support the idea that some facets of interoception (including participants' metacognitive beliefs) can be assessed subjectively, providing useful and interesting measures [@murphy2019] [**TODO: also cite the most recent paper**]. 
+The notion that self-reports might not reflect the same processes as other interoception measures is important to contextualize the apparent lack of convergence between measures in the field **(REF)**. 
+Still, a better understanding of what is being measured with different questionnaires and dimensions, as well their potential overlaps with other constructs (e.g., alexithymia, body awareness) is needed to clarify the role of self-reports in the assessment of interoception.
 
 <!-- Introducing the IAS -->
 
 A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019].
 The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*), urinating (e.g. *"I can always accurately perceive when I need to urinate"*).
-Interestingly, the IAS' statements are about specific interoceptive behaviours, which is notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012], which items are more general and metacognitive (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
+Interestingly, the IAS' statements are about specific interoceptive behaviours, which is notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; **SECOND REF**], which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
 
 <!-- IAS structure  -->
 
@@ -148,14 +145,14 @@ Most follow-up studies, using a confirmatory factor analysis approach (CFA) and 
 The original validation study suggested a two-factor solution structure, the authors however underline the need for further investigation of the scale's factor structure, as it provided acceptable but imperfect explanation of the data [@murphy2019; p. 127].
 Notably, the only other validation study to report a 2-factor solution was conducted by @koike2023, who performed an exploratory factor analysis assuming 2 factors to align with the findings from the original validation paper.
 Other follow-up studies using confirmatory factor analysis (CFA) and exploratory structural modeling [@morin2016] have identified different optimal solutions. Some studies, like @brand2023, reported a 1-factor solution, while @lin2023 and @campos2021 found bifactor solutions to be the best fit. These studies included discussions on specific items. For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others, like “bruising,” might capture phenomena not perceivable through interoceptive signals alone (yes p.119). @lin2023 also highlights their correlation analysis, showing five locally dependent pairs and three items with exceptionally high difficulty and low discrimination. Additionally, @campos2021 suggests that the “tickle” item represents a more specific factor.
-Interestingly, @lin2023 reported that all items of the IAS grouped together using a new approach, Exploratory Graph Analysis (EGA), to assess convergent and discriminant validity, which suggests unidimensionality.
+Interestingly, @lin2023 reported that all items of the IAS grouped together using a new approach, Exploratory Graph Analysis (EGA) **[REFS]**, to assess convergent and discriminant validity, which suggests unidimensionality.
 <!-- TO BE COMPLETED -->
 
 <!-- Convergent validity (correlates)  -->
 
 While the assessment of the validity of an interoception scale can be conceived as theoretically challenging, several traits have been used to assess convergent validity for the the IAS, including expected negative associations with alexithymia [@brand2023; @koike2023; @campos2023, @murphy2019], somatic symptoms [@brand2023; @koike2023], depressive symptoms [@brand2023; @koike2023], anxiety [@brand2023], neuroticism [@brand2023].   
 <!-- **anything else?**. TO BE COMPLETED -->
-The IAS has also been compared to other interoception scales (and interoceptive related scales), yielding a positive correlation with most facets of the MAIA, with the notable exception of *Non distracting* and *Not worrying* subscales [@brand2023], the body awareness dimension of the Body Perception Questionnaire [BPQ-A; @brand2023; @campos2021; @koike2023; @lin2023], the observation and description scales of the Five Facet Mindfulness Questionnaire [@ref, @brand2023], the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with interoceptive confusion questionnaire [@brand2023], IATS [@lin2023; @murphy2019].
+The IAS has also been compared to other interoception scales (and interoceptive related scales), yielding a positive correlation with most facets of the MAIA, with the notable exception of *Non distracting* and *Not worrying* subscales [@brand2023], the body awareness dimension of the Body Perception Questionnaire [BPQ-A; @brand2023; @campos2021; @koike2023; @lin2023], the observation and description scales of the Five Facet Mindfulness Questionnaire [@ref, @brand2023], the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with interoceptive confusion questionnaire [@brand2023] **[I don't think this is the correct ref]**, IATS [@lin2023; @murphy2019].
 <!-- TO BE COMPLETED -->
 
 <!-- Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019]. -->
