the structure and convergent validity paragraphs need rewriting

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -130,29 +130,29 @@ Still, a better understanding of what is being measured with different questionn
 <!-- Introducing the IAS -->
 
 A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019].
-The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*), urinating (e.g. *"I can always accurately perceive when I need to urinate"*).
-Interestingly, the IAS' statements are about specific interoceptive behaviours, which is notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; **SECOND REF**], which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
+The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*) or urinating (e.g. *"I can always accurately perceive when I need to urinate"*).
+Interestingly, the IAS' statements are about specific interoceptive behaviours, which is a notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; **SECOND REF**], which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
 
 <!-- IAS structure  -->
 
-<!-- The original validation study suggested a two-factor solution structure, the authors decided...
-**what?**, and underline the need for further investigation of the scale's factor structure [@murphy2019, *p. 127*].
-Most follow-up studies, using a confirmatory factor analysis approach (CFA) and exploratory structural equation modeling (**all used CFA but Campos also used ESEM**), report unidimensional structures to be the best fit [@lin2023; @campos2021; @brand2023], although with some discussions about specific items. -->
-<!-- For instance, @murphy2019 does mention that some items might be measuring direct interoceptive signals such as cardioception, while others, for instance "bruising", might capture phenomena that cannot be perceived through interoceptive signals alone (*yes* p.119). -->
-<!-- @lin2023 also highlights their correlation analysis showing five locally dependent pairs in three items with exceptionally high difficulty and low discrimination, and @campos2021 suggests that the "tickle" item is representing a more specific factor. -->
-<!-- Recently, @blabla used a new approach, namely Exploratory Graph Analysis (EGA), and found that **TODO**. -->
- 
-The original validation study suggested a two-factor solution structure, the authors however underline the need for further investigation of the scale's factor structure, as it provided acceptable but imperfect explanation of the data [@murphy2019; p. 127].
-Notably, the only other validation study to report a 2-factor solution was conducted by @koike2023, who performed an exploratory factor analysis assuming 2 factors to align with the findings from the original validation paper.
-Other follow-up studies using confirmatory factor analysis (CFA) and exploratory structural modeling [@morin2016] have identified different optimal solutions. Some studies, like @brand2023, reported a 1-factor solution, while @lin2023 and @campos2021 found bifactor solutions to be the best fit. These studies included discussions on specific items. For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others, like “bruising,” might capture phenomena not perceivable through interoceptive signals alone (yes p.119). @lin2023 also highlights their correlation analysis, showing five locally dependent pairs and three items with exceptionally high difficulty and low discrimination. Additionally, @campos2021 suggests that the “tickle” item represents a more specific factor.
+Although the original validation study suggested a two-factor solution structure, the authors underlines the need for further investigation of the scale's factor structure, as it provided acceptable but imperfect explanation of the data [@murphy2019; p. 127].
+Notably, the only other validation study to report a 2-factor solution was conducted by @koike2023, who performed an Exploratory Factor Analysis (EFA) assuming 2 factors to align with the findings from the original validation paper.
+Other follow-up studies using confirmatory factor analysis (CFA) and structural modeling [@morin2016] have identified different optimal solutions. 
+Some studies, like @brand2023, reported a 1-factor solution, while @lin2023 and @campos2021 found bifactor solutions **(i.e., QUICK DESCRIPTION)** to be the best fit.
+
+Discussions have also been focused on specific items. For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others might capture phenomena not perceivable through interoceptive signals alone (e.g., "bruising"; p. 119). 
+@lin2023 also highlights their correlation analysis, showing five locally dependent pairs and three items **(WHICH ONES)** with exceptionally high difficulty and low discrimination. 
+Additionally, @campos2021 suggests that the "tickle" item represents a more specific factor.
 Interestingly, @lin2023 reported that all items of the IAS grouped together using a new approach, Exploratory Graph Analysis (EGA) **[REFS]**, to assess convergent and discriminant validity, which suggests unidimensionality.
+
 <!-- TO BE COMPLETED -->
 
 <!-- Convergent validity (correlates)  -->
 
 While the assessment of the validity of an interoception scale can be conceived as theoretically challenging, several traits have been used to assess convergent validity for the the IAS, including expected negative associations with alexithymia [@brand2023; @koike2023; @campos2023, @murphy2019], somatic symptoms [@brand2023; @koike2023], depressive symptoms [@brand2023; @koike2023], anxiety [@brand2023], neuroticism [@brand2023].   
 <!-- **anything else?**. TO BE COMPLETED -->
-The IAS has also been compared to other interoception scales (and interoceptive related scales), yielding a positive correlation with most facets of the MAIA, with the notable exception of *Non distracting* and *Not worrying* subscales [@brand2023], the body awareness dimension of the Body Perception Questionnaire [BPQ-A; @brand2023; @campos2021; @koike2023; @lin2023], the observation and description scales of the Five Facet Mindfulness Questionnaire [@ref, @brand2023], the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with interoceptive confusion questionnaire [@brand2023] **[I don't think this is the correct ref]**, IATS [@lin2023; @murphy2019].
+The IAS has also been compared to other interoception scales (and interoceptive related scales), yielding a positive correlation with most facets of the MAIA, with the notable exception of *Non distracting* and *Not worrying* subscales [@brand2023], the body awareness dimension of the Body Perception Questionnaire [BPQ-A; @brand2023; @campos2021; @koike2023; @lin2023], the observation and description scales of the Five Facet Mindfulness Questionnaire [FFMQ **what is ref?**; @ref, @brand2023], the interoceptive awareness subscale of the Eating Disorder Inventory [@lin2023] and a negative correlation with the interoceptive confusion questionnaire [@brand2023] **[I don't think this is the correct ref]**, IATS [@lin2023; @murphy2019].
+<!-- What about the iats? -->
 <!-- TO BE COMPLETED -->
 
 <!-- Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019]. -->
