--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -3,7 +3,6 @@ title: "Meta-analysis of the Interoceptive Accuracy Scale (IAS) Structure and it
 shorttitle: "IAS Meta-analysis"
 author:
   - name: Ana Neves
-    corresponding: true
     orcid: 0009-0006-0020-7599
     # roles: 
       # - Project administration
@@ -60,7 +59,6 @@ author:
     #   - Writing – original draft
     #   - Writing – review & editing
   - name: Magdalena Pfaff
-    corresponding: true
     orcid: 0009-0006-2386-7936
     affiliations:
       - ref: id1 
@@ -129,7 +127,7 @@ Still, a better understanding of what is being measured with different questionn
 
 <!-- Introducing the IAS -->
 
-A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019].
+A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019].
 The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*) or urinating (e.g. *"I can always accurately perceive when I need to urinate"*).
 Interestingly, the IAS' statements are about specific interoceptive behaviours, which is a notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; **SECOND REF**], which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
 
@@ -157,20 +155,18 @@ The IAS has also been compared to other interoception scales (and interoceptive 
 
 <!-- Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019]. -->
 
-The current study aims at 1) clarifying the structure of the IAS with a meta-analytic approach that leverages existing data and contrasts the traditional CFA/SEM factor-based analyses with graph-based ones such as EGA.
-2) The second part will provide an overview of the dispositional correlates of the IAS, sketching a pattern of associations that is key to better understand the nature, place and role of interoception questionnaires within a larger context.
+The current study aims at 1) clarifying the structure of the IAS with a meta-analytic approach that leverages existing data and contrast the traditional CFA/SEM factor-based analyses with network-based ones such as EGA.
+2) The second part will provide an overview of the dispositional correlates of the IAS, providing an overview of the pattern of associations that is key to better understand the nature, place and role of interoception questionnaires within a larger context.
 
 ## Study 1
 
 The goal of study 1 is to re-analyse and assess the factor structure of the IAS by taking advantage of the large number of open-access datasets [@brand2023; @campos2021; @lin2023; @murphy2019; @arslanova2022; @todd2022; @gaggero2021; @brand2022; @von2023].
 While combining these studies might provide a more robust and generalizable understanding of the IAS' factor structure, it is important to note that the studies differ in their sample sizes, demographics, language, and the way they collected the data.
-Thus, providing additionally a individual analysis (i.e., on all samples individually) will help adding nuance to the general picture.
+Thus, providing additionally an individual analysis (i.e., on all samples individually) will help adding nuance to the general picture.
 
-### Method
+### Methods
 
 #### Datasets
-
-
 
 Our search focused on studies citing the original IAS validation paper [@murphy2019], identifying 136 papers (as of **XX/XX/2024**).
 To qualify for inclusion, papers needed to (1) provide accessible data in open-access, (2) employ the IAS as a measure, and (3) report individual IAS items scores.
@@ -194,29 +190,29 @@ See @tbl-samples for a summary of the samples demographics.
 **TODO: add language also, as well as maybe something like "difference" from the original validation (which could actually be language, and for our the type of scale / less items)** <!-- **TODO: add links to GH for our studies** -->
 
 
-## Statistical Analysis
+### Statistical Analysis
 
 To examine the factor structure of the IAS, a two-step approach was employed.
 First, Exploratory Graph Analysis (EGA), was used to estimate the dimensions via network estimation and community detection, alongside assessing the stability of dimensions and items using the bootstrapping techniques.
 The selection of EGA was motivated by its capability to handle complex, multidimensional data and provide robust dimension estimates.
 Subsequently, exploratory factor analysis (EFA) was employed followed by confirmatory factor analysis (CFA).
 
-# Results
+### Results
 
 Visualizing the distribution of the items for all samples suggests the presence of a consistent modal value (Fig. X).
-In other words,  participants are most likely to answer 4/5 (i.e., agree) on most items (but "affective touch", "blood sugar", and "bruise" that exhibit a different distributional pattern).
+In other words, participants are most likely to answer 4/5 (i.e., agree) on most items (but "affective touch", "blood sugar", and "bruise" that exhibit a different distributional pattern).
 Additionally, one can note the low density on extreme values (1 and 5), meaning that the bulk of answers **(87% TODO: get the actual statistic: what's the proportion of non 1&5 answers for the likert scale samples)** varies between 3 values.
 The interindividual variability seems improved in the samples using an analogue scale, displaying a more continuous and progressive spread of answers.
 
 ![**Figure 1.** Distribution of responses for all items across all datasets.](figures/clipboard-1080495164.png){width="723"}
 
-### Correlations
+#### Correlations
 
 The correlation analysis revealed that the items overall have positive intercorrelation patterns with no clear structure emerging.
 This remains the same across all samples.
 However, there are possibly some higher-order groupings emerging for the 2 analog-scale samples.
 
-### EGA
+#### EGA
 
 The unique variable analysis revealed that there are two redundant variables when taking all samples into account.
 Namely, "itch" and "tickle", where "tickle" should be removed, and "itch" should remain in the questionnaire.
@@ -238,7 +234,7 @@ Confirmatory factor analysis showed that the time "tickle" can be discarded, as 
 Some of the factors were ambiguous, namely, temperature, vomit, effective touch, sexual arousal, as well as taste.
 There was no evidence for higher order factors.
 
-# Discussion
+### Discussion
 
 In this study, several datasets were analyzed for a meta analysis of the structure of the IAS.
 The findings reveal that a 4-factor model fits the IAS best.
@@ -267,7 +263,7 @@ Therefore, we recommend using an analog scale for the IAS.
 Before this paper, the IAS has not yet been used or analyzed with an analog scale, rather than a five step scale.
 Therefore, this study provides a novel approach to improving the IAS in a simple manner.
 
-## Limitations and Future Directions
+### Limitations and Future Directions
 
 There are several limitations to the IAS; There are some redundant items, the 5-point scale does not provide great variability, and the structure could be improved.
 Therefore, improving the IAS, or creating a new questionnaire investigating interoception could be useful to achieving reliable and accurate indication of interoceptive awareness.
@@ -279,9 +275,9 @@ Correlations of the IAS will be computed to assess the relationship between subj
 Investigating correlates will help validate the IAS, as well as other interoceptive measures in the future.
 The
 
-## Methods
+### Methods
 
-### Materials
+#### Materials
 
 The questionnaires used for the IAS correlates are listed in Table 2 (**TODO: add the rest of the questionnaires, sample items and references**).
 
@@ -315,11 +311,11 @@ The questionnaires used for the IAS correlates are listed in Table 2 (**TODO: ad
 
 *Note.* MAIA-2 Multidimensional Assessment of Interoceptive Awareness Version-2; BPQ Body Perception Questionnaire (Mehling et al. 2018); TAS-20 Toronto Alexithymia Scale (Bagby et al., 1994); BVAQ Bermond-Vorst Alexithymia Questionnaire (Vorst & Bermond, 2001); BDI-II Beck's Depression Inventory (Dozois et al., 1998); PHQ-4 Patient Health Questionnaire (Kroenke et al., 2009); STAI-T State-Trait-Anxiety Inventory Trait-Version (Spielberger et al. 1970); GAD- 2 Generalized Anxiety Disorder Scale – 2 (Spitzer et al., 2007); NEO-FFI NEO Five-Factor Inventory Neuroticism (Costa & McCrae, 2008); Mini IPIP6 Mini International Personality Item Pool (Sibley et al. 2011); BFI Big Five Inventory (John et al., 2010); PID-5-SF Personality Inventory for DSM-5 Short Form (Thimm et al., 2016); SPQ-BRU Schizotypal Personality Questionnaire (Davidson et al., 2016); MSI-BPD Mclean Screening Instrument for Borderline Personality Disorder (Zanarini et al. 2003); ASQ Short Autism-Spectrum Quotient (Hoekstra et al. 2011); GCB Generic Conspiracist Beliefs scale (Brotherton et al.,  2013); PI-18 Primals Inventory (Clifton et al., 2021); LIE scale Lying Profile Questionnaire (Makowski, et al,. 2023).
 
-### Statistical analysis
+#### Statistical analysis
 
 Correlations will be computed using the correlation package under a Bayesian framework (ref).
 
-## Results
+### Results
 
 The EGA components capture groupings of pairs of items, such as "wind" and "burp", "cough" and "sneeze", or "muscle" and "pain".
 These groupings were used in the correlational analysis, to observe how much each group/pair correlates with other factors, such as Alexithymia, or the MAIA (see Figure 2).
@@ -339,10 +335,10 @@ World beliefs were mostly positively correlated with the IAS, however, only a fe
 
 ![**Figure 2.** Correlates of the IAS](figures/clipboard-1619164537.png){width="911"}
 
-## Discussion
+### Discussion
 
 Our findings confirmed that interception lies within an intricate network of correlates.
- Alexithyma has the most negative correlation with the IAS, whereas, the MAIA questionnaire is most strongly positively correlated with the IAS.
+Alexithyma has the most negative correlation with the IAS, whereas, the MAIA questionnaire is most strongly positively correlated with the IAS.
 The correlates cannot only explain attributes of interoception, but can also be used to validate measures for interoception. 
 
 While these results reveal correlations of different categories with the IAS, the findings are limited to the given questionnaire.
@@ -370,7 +366,7 @@ Further research is needed to understand this mechanism and validate whether wor
 The above findings show how interoception is correlated with many lifestyle and health factors, and is therefore an important concept to study.
 Here we showed many correlates of the IAS and lifestyle, as well as health factors.
 This is not only valuable to understand interception, and the role it plays in our lives, better, but also crucial to further validate the Ias, as well as other interoception measures.
-This analysis therefore lays the groundwork for validating new interoceptive measures and questionnaires needed to grasp interoception and its role in our life. 
+This analysis therefore lays the groundwork for validating new interoceptive measures and questionnaires needed to grasp interoception and its role in our life.
 
 ## General Discussion
 
@@ -378,20 +374,20 @@ The analyses revealed that the IAS has 4-factor structure, and a rather uneven d
 The findings indicate that the IAS is measuring interoception in an acceptable manner, but there is also room for improvement.
 Furthermore, the results reveal different correlation measures with the IAS, giving space to further explore whether and how measures correlate with interoception/the IAS.
 In the following section, the IAS is discussed further to reveal shortcomings and strengths of the questionnaire.
-Finally, future steps will be revealed to improve the way in which we measure interoception. 
+Finally, future steps will be revealed to improve the way in which we measure interoception.
 
 Overall, the IAS is straightforward with its sensation-centered items.
 There are several points of improvement to the IAS, which this work suggests.
 Firstly, removing redundant items, such as the itch item as shown in the above analysis.
 Previous work has also shown that the itch and tickle items are subject to redundancy [@lin2023, @campos2021] has shown.
 Interestingly, @campos2021 suggest removin the tickle item instead.
-@lin2023 on the other hand removed the itch item, because the sign for itch and tickle is the same. 
-Furthermore,  this work recommends using analog scales, instead of 5 point scales.
+@lin2023 on the other hand removed the itch item, because the sign for itch and tickle is the same.
+Furthermore, this work recommends using analog scales, instead of 5 point scales.
 In a 5-point scale, the variability is clearly limited with most people choosing ⅘.
 As visible in Figure X, the variability increases significantly, using an analog scale.
 However, it is important to note that even with an analog scale, the variability of the IAS is still limited.
 The more variability a scale shows, the more results can depict individual differences between participants.
-Therefore, good dispersion is essential for achieving relevant and usable results, and striving for more variability would be beneficial to this interoception scale, too. 
+Therefore, good dispersion is essential for achieving relevant and usable results, and striving for more variability would be beneficial to this interoception scale, too.
 
 In this work, it becomes apparent that even with the mentioned improvements to the scale, there are limitations to the IAS, which reduce the accuracy of this scale.
 Those limitations include that there are few items for some modalities, such as only one item for heart perception.
@@ -401,30 +397,26 @@ Ideally, a scale would allow for an analysis showing different groupings so that
 The groupings in this analysis reveal that the IAS can only be grouped with two items per group, leading to low scores and variability in each group.
 On top of that, there are ambiguous items in the IAS, of which the grouping depends on the context.
 For example, one might indicate that they can perceive well how their heart is beating fast as well as vomiting, but both items can be linked to feeling anxious, and therefore might indicate different results than initially expected.
-Therefore, the grouping and structure of the IAS can be improved. 
+Therefore, the grouping and structure of the IAS can be improved.
 
 Furthermore, all items are phrased positively, which might influence how participants answer the questions.
 While phrasing items in a positive manner can be beneficial, the benefits of positive phrasing might exacerbate a positive bias and thus lead to unidimensional results.
-Therefore, phrasing questions in a more diverse manner might lead to more accurate results and might thus be beneficial. 
+Therefore, phrasing questions in a more diverse manner might lead to more accurate results and might thus be beneficial.
 
 Based on the given arguments, it becomes clear that there is a need for context-specific items, which are cross-modal when possible, such as integrating cardioception and respiroception.
 After establishing the clear need for a new scale to measure interoception, this study proposes the need for a new scale (Multimodal Interoceptive Sensitivity Scale, MISS) to adapt to the newest findings on the IAS and what we know about interoception to this day.
-The new scale will be able to be compared to the correlates of the IAS. 
+The new scale will be able to be compared to the correlates of the IAS.
 
 ## Conclusion
 
 The IAS is a good way of measuring interoception considering the current existing questionnaires and tools.
 However, revising, or even re-inventing a survey to measure interoception would lead to the best measure of interoception.
 Therefore, this study proposes that a new scale to measure interoception is needed to evolve the current research on interoception.
-This study revealed many correlates of the IAS, giving space for future analysis on what might be a good interoceptive measure, and therefore laying the groundwork for the creation of a new interoception survey. 
+This study revealed many correlates of the IAS, giving space for future analysis on what might be a good interoceptive measure, and therefore laying the groundwork for the creation of a new interoception survey.
 
-# References
+## References
 
 <!-- References will auto-populate in the refs div below -->
 
 ::: {#refs}
 :::
-
-# Appendix
-
-# Title for Appendix
