added Giulias data

--- a/analysis/Stud1_a.qmd
+++ b/analysis/Stud1_a.qmd
@@ -269,6 +269,18 @@ data <- list(df1a=df1a, df1b=df1b, df2=df2, df3=df3, df4=df4, df5=df5, df6=df6, 
 save(data, file = "../data/data.RData")
 ```
 
+### Sample 11
+
+- Giulia
+
+```{r}
+
+df11a <- haven::read_sav("../data/Giulia/Interoceptive Attention ESM.sav") |>
+  
+
+df11b <- haven::read_sav("../data/Giulia/Sleep and Exteroceptive Interoceptive Sensitivity.sav")
+```
+
 :::
 
 
