rendered html with added data

--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -1,5 +1,6 @@
-\setlength{\LTpost}{0mm}
-\begin{longtable}{lllrrrrl}
+\begin{table}[!t]
+\fontsize{9.0pt}{10.8pt}\selectfont
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lllrrrrl}
 \toprule
 Sample & Subsample & Language & N & Age (Mean  ± SD) & Range & Female \% & Availability \\ 
 \midrule\addlinespace[2.5pt]
@@ -8,8 +9,8 @@ Murphy et al., (2020) &  &  &  &  &  &  &  \\
  & Sample 2 & English & 375 & 35.3 ± 16.9 & 18-91 & 70.1\% & https://osf.io/3m5nh \\ 
 Gaggero et al., (2021) &  & English and Italian & 814 & 24.9 ± 5.3 & 18-58 & 60.3\% & https://osf.io/5x9sg \\ 
 Campos et al., (2022) &  & Portuguese & 515 & 30.7 ± 10.5 & 18-72 & 59.6\% & https://osf.io/j6ef3 \\ 
-Todd et al., (2022) &  & English & 802 & TODO* & 18-92* & NA & https://osf.io/ms354 \\ 
-Arslanova et al., (2022) &  & English & 96 & TODO* & 18-73 & 46.8\% & https://osf.io/mp3cy \\ 
+Todd et al., (2022) &  & English & 802 & 48.6.6 ± 14.1* & 18-92* & 50\%* & https://osf.io/ms354 \\ 
+Arslanova et al., (2022) &  & English & 143 & 28.5 ± 7.6 & 18-73 & 46.8\% & https://osf.io/mp3cy \\ 
 Brand et al., (2022) &  & German & 619 & 43.9 ± 14.5 & 18-78 & 78.7\% & https://osf.io/xwz6g \\ 
 Brand et al., (2023) &  &  &  &  &  &  &  \\ 
  & Sample 1 & German & 522 & 23.4 ± 6.7 & 18-79 & 79.5\% &  \\ 
@@ -20,11 +21,15 @@ Lin et al., (2023) &  &  &  &  &  &  &  \\
  & Sample 2 & Chinese & 500 & 37.4 ± 7.4 & 20-60 & 56.2\% & https://osf.io/3eztd \\ 
 VonMohr et al., (2023) &  & English & 21843 & 56.5 ± 14.4 & 18-93 & 73.2\% & https://osf.io/7p9u5 \\ 
 Makowski et al., (2023a) &  & English & 485 & 30.1 ± 10.1 & 18-73 & 50.3\% & https://github.com/RealityBending/IllusionGameReliability \\ 
-Makowski et al., (2023b) &  & English & 251 & 37.5 ± 13.2 & 17-76 & 53.0\% & https://github.com/DominiqueMakowski/PHQ4R \\ 
-Total &  &  & 31317 & 49.5 & 17 - 93 & 71.5\% &  \\ 
+Makowski et al., (2023b) &  & English & 836 & 25.1 ± 11.3 & 17-76 & 53.0\% & https://github.com/DominiqueMakowski/PHQ4R \\ 
+Makowski et al., (2023c) &  & English & 104 & 21.6 ± 5.0 & 18-50 & 76\% & https://github.com/RealityBending/InteroceptionPrimals \\ 
+Poreiro et al., (2024) &  & English & 107 & 26.8 ± 9.2 & 18-57 & 74.8\% & https://osf.io/49wbv \\ 
+Poreiro et al., unpublished &  & English & 133 & 30.8 ± 12.0 & 18-60 & 75.9\% &  \\ 
+Total &  &  & 32216 & 48.6 ± 13.1 & 17-93 & 71.6 &  \\ 
 \bottomrule
-\end{longtable}
+\end{tabular*}
 \begin{minipage}{\linewidth}
-* Information copied from the sample description rather than recomputed.\\
+* Information taken from the sample description of relevant paper rather than recomputed.\\
 \end{minipage}
+\end{table}
 
