--- a/analysis/Stud1_a.qmd
+++ b/analysis/Stud1_a.qmd
@@ -105,9 +105,23 @@ df4 <- haven::read_sav("../data/Todd2022/CompleteData_new.sav") |>
 
 - Arslanova (2022)
   - https://osf.io/mp3cy/
+  - note: Final.xlsx includes information about which participants passed the attention checks 
 
 ```{r}
-df5 <- readxl::read_excel("../data/Arslanova2022/Murphy_Iacc_scale.xlsx")  |> 
+
+df5_attention <- readxl::read_excel("C:/Users/asf25/Documents/studies/InteroceptionIAS/data/Arslanova2022/Participants2.xlsx", 
+    sheet = "FINAL") |>
+  filter(ActorHR == 1) |>
+  select(Subj.ID, Gender, Age) |>
+  mutate(Gender = as.numeric(Gender), Age = as.numeric(Age)) |>
+  filter(!is.na(Age)) |> #error on the documentation of this participant - attention check failed but not noted
+  mutate(Gender = case_when(
+    Gender== 0 ~ "Male",
+    Gender== 1 ~ "Female" # based on paper reporting 65 women
+  ))
+
+
+df5 <- readxl::read_excel("../data/Arslanova2022/Murphy_Iacc_scale.xlsx")  |>
   filter(str_detect(Question.Key, "IAC_")) |> 
   filter(str_detect(Question.Key, "-quantised")) |> 
   pivot_wider(names_from = Question.Key, values_from = Response) |>
@@ -117,8 +131,14 @@ df5 <- readxl::read_excel("../data/Arslanova2022/Murphy_Iacc_scale.xlsx")  |>
          Temp = HotCold, Tickle = Ticklish, Breathing= BreatheFast, 
          Affective_touch= PleasantAffectionate, Blood_Sugar= BloodSugar, 
          Muscles=TiredMuscles, Heart= FastHeart, Taste=Tastes) |> 
-  select(-starts_with("Participant")) |> 
-  mutate_all(as.numeric)
+  rename(Subj.ID = "Participant.Public.ID") |>
+  select(-starts_with("Participant")) 
+
+df5 <- df5 |>
+  filter(Subj.ID %in% df5_attention$Subj.ID) |>
+  select(-Subj.ID) |>
+  mutate(across(everything(), as.numeric))
+  
 ```
 
 ### Sample 6
@@ -239,6 +259,7 @@ df9 <- df9 |>
 - Makowski
   - Note: First sample has some missing items
   - Note: Analog scales
+  - note df10c = primals data
 
 ```{r}
 df10a <- read.csv("https://raw.githubusercontent.com/RealityBending/IllusionGameReliability/main/data/preprocessed_questionnaires.csv") |>
@@ -264,9 +285,17 @@ df10b <- read.csv("https://raw.githubusercontent.com/DominiqueMakowski/PHQ4R/mai
     Affective_touch = IAS_19, Tickle = IAS_20, Itch = IAS_21
   )
 
-# Save all
-data <- list(df1a=df1a, df1b=df1b, df2=df2, df3=df3, df4=df4, df5=df5, df6=df6, df7a=df7a, df7b=df7b, df7c=df7c, df8a=df8a, df8b=df8b, df9=df9, df10a=df10a, df10b=df10b)
-save(data, file = "../data/data.RData")
+df10c <- read.csv("https://raw.githubusercontent.com/RealityBending/InteroceptionPrimals/refs/heads/main/data/data_participants.csv") |>
+  select("Participant" = "participant_id", "Gender", "Age", "Ethnicity", starts_with("IAS")) |>
+   rename(
+    Heart = IAS_1, Hungry = IAS_2, Breathing = IAS_3, Thirsty = IAS_4,
+    Urinate = IAS_5, Defecate = IAS_6, Taste = IAS_7, Vomit = IAS_8, Sneeze = IAS_9,
+    Cough = IAS_10, Temp = IAS_11, Sex_arousal = IAS_12, Wind = IAS_13, Burp = IAS_14,
+    Muscles = IAS_15, Bruise = IAS_16, Pain = IAS_17, Blood_Sugar = IAS_18,
+    Affective_touch = IAS_19, Tickle = IAS_20, Itch = IAS_21
+  ) |>
+  filter(!is.na(Heart)) # participant is outlier and had total IAS scores below 0.4 
+
 ```
 
 ### Sample 11
@@ -275,10 +304,44 @@ save(data, file = "../data/data.RData")
 
 ```{r}
 
-df11a <- haven::read_sav("../data/Giulia/Interoceptive Attention ESM.sav") |>
+df11a <- df11a <- haven::read_sav("../data/Giulia/Interoceptive Attention ESM.sav") |> 
+  select(AGE, GENDER, contains("IAS_ACC"), -IAS_ACC_20) |>
+  mutate_all(as.numeric) |>
+  rename(
+    Age = AGE, Gender = GENDER,
+    Heart = IAS_ACC_1, Hungry = IAS_ACC_2, Breathing = IAS_ACC_3, Thirsty = IAS_ACC_4,
+    Urinate = IAS_ACC_5, Defecate = IAS_ACC_6, Taste = IAS_ACC_7, Vomit = IAS_ACC_8, Sneeze = IAS_ACC_9,
+    Cough = IAS_ACC_10, Temp = IAS_ACC_11, Sex_arousal = IAS_ACC_12, Wind = IAS_ACC_13, Burp = IAS_ACC_14,
+    Muscles = IAS_ACC_15, Bruise = IAS_ACC_16, Pain = IAS_ACC_17, Blood_Sugar = IAS_ACC_18,
+    Affective_touch = IAS_ACC_19, Tickle =IAS_ACC_21, Itch = IAS_ACC_22
+  ) |>
+   mutate(Gender = case_when(
+    Gender == 1 ~ "Male",
+    Gender == 2 ~ "Female",
+    Gender %in% c(3, 5) ~ "Other",
+    Gender == 4 ~ "NA"
+  ))
   
 
-df11b <- haven::read_sav("../data/Giulia/Sleep and Exteroceptive Interoceptive Sensitivity.sav")
+df11b <- haven::read_sav("../data/Giulia/Sleep and Exteroceptive Interoceptive Sensitivity.sav") |> # 165 participants
+  filter(Total_Attention_Fail == 0) |> # 32 participants removed based on failing one or more checks
+  select(AGE, GENDER, contains("IAS_ACC")) |> 
+  mutate_all(as.numeric) |> 
+  rename( Age = AGE, Gender = GENDER, 
+          Heart = IAS_ACC_1, Hungry = IAS_ACC_2, Breathing = IAS_ACC_3, Thirsty = IAS_ACC_4, Urinate = IAS_ACC_5, Defecate = IAS_ACC_6, Taste = IAS_ACC_7,
+          Vomit = IAS_ACC_8, Sneeze = IAS_ACC_9, Cough = IAS_ACC_10, Temp = IAS_ACC_11, Sex_arousal = IAS_ACC_12, Wind = IAS_ACC_13, Burp = IAS_ACC_14,
+          Muscles = IAS_ACC_15, Bruise = IAS_ACC_16, Pain = IAS_ACC_17, Blood_Sugar = IAS_ACC_18, Affective_touch = IAS_ACC_19, Tickle =IAS_ACC_20, 
+          Itch = IAS_ACC_21 )  |> 
+  mutate(Gender = case_when(
+    Gender == 1 ~ "Male", 
+    Gender == 2 ~"Female", 
+    Gender %in% c(3, 5) ~ "Other", 
+    Gender == 4 ~ "NA", ))
+
+
+# Save all
+data <- list(df1a=df1a, df1b=df1b, df2=df2, df3=df3, df4=df4, df5=df5, df6=df6, df7a=df7a, df7b=df7b, df7c=df7c, df8a=df8a, df8b=df8b, df9=df9, df10a=df10a, df10b=df10b, df10c=df10c, df11a=df11a, df11b=df11b)
+save(data, file = "../data/data.RData")
 ```
 
 :::
@@ -291,7 +354,7 @@ df11b <- haven::read_sav("../data/Giulia/Sleep and Exteroceptive Interoceptive S
 - **Sample 2**: Data from [Gaggero's(2020)](https://osf.io/5x9sg/) study, downloaded from OSF, included `r report::report_participants(df2[c("Age", "Gender")], age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 3**: Data from [Campos's(2022)](https://osf.io/j6ef3) study, downloaded from OSF, included `r report::report_participants(df3, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 4**: Data from [Todd's(2022)]( https://osf.io/ms354/) study, downloaded from OSF, included `r report::report_participants(df4, age = "Age", sex = NA, gender = "Gender")`.
-- **Sample 5**: Data from [Arslanova (2022)](https://osf.io/mp3cy/) study, downloaded from OSF, included `r report::report_participants(df5, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 5**: Data from [Arslanova (2022)](https://osf.io/mp3cy/) study, downloaded from OSF, included `r report::report_participants(df5_attention, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 6**: Data from [Brand's(2022)](https://osf.io/xwz6g/) study, downloaded from OSF, included `r report::report_participants(df6, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 7a**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7a, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 7b**: Data from [Brand's(2023)](https://osf.io/3f2h6/) study, downloaded from OSF, included `r report::report_participants(df7b, age = "Age", sex = NA, gender = "Gender")`.
@@ -301,9 +364,12 @@ df11b <- haven::read_sav("../data/Giulia/Sleep and Exteroceptive Interoceptive S
 - **Sample 9**: Data from [VonMohr's(2023)](https://osf.io/7p9u5/) study 3, downloaded from OSF, included `r report::report_participants(df9, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10a**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10a, age = "Age", sex = NA, gender = "Gender")`.
 - **Sample 10b**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10b, age = "Age", sex = NA, gender = "Gender")`.
+- **Sample 10c**: Data from [Makowski's(2023)] study , downloaded from OSF, included `r report::report_participants(df10c, age = "Age", sex = NA, gender = "Gender")`.
+-- **Sample 11a**: Data from [Giulia's (2024)](https://osf.io/49wbv) study , included `r report::report_participants(df11a, age = "Age", sex = NA, gender = "Gender")`
+- **Sample 11b**: Data from [Giulia] study , included `r report::report_participants(df11b, age = "Age", sex = NA, gender = "Gender")`
 
 
-Total N = `r nrow(df1a) + nrow(df1b) + nrow(df2) + nrow(df3) + nrow(df4) + nrow(df5) + nrow(df6) + nrow(df7a) + nrow(df7b) + nrow(df7c) + nrow(df8a) + nrow(df8b) + nrow(df9) + nrow(df10a) + nrow(df10b)`.
+Total N = `r nrow(df1a) + nrow(df1b) + nrow(df2) + nrow(df3) + nrow(df4) + nrow(df5) + nrow(df6) + nrow(df7a) + nrow(df7b) + nrow(df7c) + nrow(df8a) + nrow(df8b) + nrow(df9) + nrow(df10a) + nrow(df10b) + nrow(df10c) +nrow(df11a) + nrow(df11b)`.
 
 ```{r}
 
@@ -324,7 +390,7 @@ desc_df1b <- desc(df1b)
 desc_df2 <- desc(df2)
 desc_df3 <- desc(df3)
 #desc_df4 <- desc(df4)
-#desc_df5 <- desc(df5)
+desc_df5 <- desc(df5_attention)
 desc_df6 <- desc(df6)
 desc_df7a <- desc(df7a)
 desc_df7b <- desc(df7b)
@@ -334,8 +400,11 @@ desc_df8b <- desc(df8b)
 desc_df9 <- desc(df9)
 desc_df10a <- desc(df10a)
 desc_df10b <- desc(df10b)
+desc_df10c <- desc(df10c)
+desc_df11a <- desc(df11a)
+desc_df11b <- desc(df11b)
 
-desc_total <- rbind(desc_df1a, desc_df1b, desc_df2, desc_df3, desc_df6, desc_df7a, desc_df7b, desc_df7c, desc_df8a, desc_df8b, desc_df9, desc_df10a, desc_df10b)
+desc_total <- rbind(desc_df1a, desc_df1b, desc_df2, desc_df3, desc_df5, desc_df6, desc_df7a, desc_df7b, desc_df7c, desc_df8a, desc_df8b, desc_df9, desc_df10a, desc_df10b, desc_df10c, desc_df11a, desc_df11b)
 
 ## calculate weighted mean
 
@@ -390,21 +459,21 @@ make_age <- function(age) {
 
 # Create the dataframe
 table <- data.frame(
-  Sample = c('Murphy et al., (2020)', '', '', 'Gaggero et al., (2021)', 'Campos et al., (2022)', 'Todd et al., (2022)', 'Arslanova et al., (2022)', 'Brand et al., (2022)', 'Brand et al., (2023)', '', '', '', 'Lin et al., (2023)', '', '', 'VonMohr et al., (2023)', 'Makowski et al., (2023a)', 'Makowski et al., (2023b)', 'Total'),
-  Subsample = c('', 'Sample 1', 'Sample 2', '', '', '', '', '', '', 'Sample 1', 'Sample 2', 'Sample 3', '', 'Sample 1', 'Sample 2', '', '', '', ''),   
-  Language = c('', 'English', 'English' , 'English and Italian', 'Portuguese', 'English', 'English', 'German', '', 'German', 'German', 'German', '', 'Chinese', 'Chinese', 'English', 'English', 'English', ''),
-  N = c('', nrow(df1a), nrow(df1b), nrow(df2), nrow(df3), nrow(df4), 96, nrow(df6),'', nrow(df7a), nrow(df7b), 802,'', nrow(df8a), nrow(df8b), nrow(df9), nrow(df10a), nrow(df10b), 31317),
-  Age = c('', make_age(df1a$Age), make_age(df1b$Age), make_age(df2$Age), make_age(df3$Age), "TODO*", "TODO*", make_age(df6$Age),'', make_age(df7a$Age), make_age(df7b$Age), make_age(df7c$Age),'', make_age(df8a$Age), make_age(df8b$Age), make_age(df9$Age), make_age(df10a$Age), make_age(df10b$Age), 49.5),
-  Range = c('', '18-69', '18-91', '18-58', '18-72', '18-92*', '18-73', '18-78', '', '18-79', '16-81', '18-72','', '16-60', '20-60', '18-93', '18-73', '17-76', '17 - 93'),
-  Female_Percentage = c('', '69.4%', '70.1%', '60.3%', '59.6%', NA, '46.8%', '78.7%', '', '79.5%', '77.7%', '68.9%', '', '57.0%', '56.2%', '73.2%', '50.3%', '53.0%', '71.5%'),
-  Availability= c('', '', 'https://osf.io/3m5nh', 'https://osf.io/5x9sg', 'https://osf.io/j6ef3', 'https://osf.io/ms354', 'https://osf.io/mp3cy', 'https://osf.io/xwz6g', '', '', 'https://osf.io/3f2h6', '','','', 'https://osf.io/3eztd', 'https://osf.io/7p9u5', 'https://github.com/RealityBending/IllusionGameReliability', 'https://github.com/DominiqueMakowski/PHQ4R', '')
+   Sample = c('Murphy et al., (2020)', '', '', 'Gaggero et al., (2021)', 'Campos et al., (2022)', 'Todd et al., (2022)', 'Arslanova et al., (2022)', 'Brand et al., (2022)', 'Brand et al., (2023)', '', '', '', 'Lin et al., (2023)', '', '', 'VonMohr et al., (2023)', 'Makowski et al., (2023a)', 'Makowski et al., (2023b)', 'Makowski et al., (2023c)', 'Poreiro et al., (2024)', 'Poreiro et al., unpublished', 'Total'),
+  Subsample = c('', 'Sample 1', 'Sample 2', '', '', '', '', '', '', 'Sample 1', 'Sample 2', 'Sample 3', '', 'Sample 1', 'Sample 2', '', '', '', '', '','', ''),   
+  Language = c('', 'English', 'English' , 'English and Italian', 'Portuguese', 'English', 'English', 'German', '', 'German', 'German', 'German', '', 'Chinese', 'Chinese', 'English', 'English', 'English', 'English', 'English', 'English',''),
+  N = c('', nrow(df1a), nrow(df1b), nrow(df2), nrow(df3), nrow(df4), nrow(df5_attention), nrow(df6),'', nrow(df7a), nrow(df7b), 802,'', nrow(df8a), nrow(df8b), nrow(df9), nrow(df10a), nrow(df10b), nrow(df10c), nrow(df11a), nrow(df11b), 32216),
+  Age = c('', make_age(df1a$Age), make_age(df1b$Age), make_age(df2$Age), make_age(df3$Age), "48.6.6 ± 14.1*", make_age(df5_attention$Age), make_age(df6$Age),'', make_age(df7a$Age), make_age(df7b$Age), make_age(df7c$Age),'', make_age(df8a$Age), make_age(df8b$Age), make_age(df9$Age), make_age(df10a$Age), make_age(df10b$Age), make_age(df10c$Age), make_age(df11a$Age), make_age(df11b$Age), '48.6 ± 13.1'),
+  Range = c('', '18-69', '18-91', '18-58', '18-72', '18-92*', '18-73', '18-78', '', '18-79', '16-81', '18-72','', '16-60', '20-60', '18-93', '18-73', '17-76','18-50', '18-57', '18-60', '17-93'),
+  Female_Percentage = c('', '69.4%', '70.1%', '60.3%', '59.6%', '50%*', '46.8%', '78.7%', '', '79.5%', '77.7%', '68.9%', '', '57.0%', '56.2%', '73.2%', '50.3%', '53.0%', '76%', '74.8%', '75.9%', '71.6'),
+  Availability= c('', '', 'https://osf.io/3m5nh', 'https://osf.io/5x9sg', 'https://osf.io/j6ef3', 'https://osf.io/ms354', 'https://osf.io/mp3cy', 'https://osf.io/xwz6g', '', '', 'https://osf.io/3f2h6', '','','', 'https://osf.io/3eztd', 'https://osf.io/7p9u5', 'https://github.com/RealityBending/IllusionGameReliability', 'https://github.com/DominiqueMakowski/PHQ4R', 'https://github.com/RealityBending/InteroceptionPrimals', 'https://osf.io/49wbv', '','')
 ) 
 
 table_apa <- table |> 
   gt() |>
   cols_align(align = c("right"), columns = "Age") |> 
   cols_label(Age = "Age (Mean  ± SD)", Female_Percentage = "Female %") |> 
-  tab_footnote("* Information copied from the sample description rather than recomputed.") |> 
+  tab_footnote("* Information taken from the sample description of relevant paper rather than recomputed.") |> 
   gt_apastyle() 
   
 table_apa
@@ -456,10 +525,17 @@ dens10a <- estimate_density(select(df10a, all_of(setdiff(vars, c("Taste", "Cough
 dens10b <- estimate_density(select(df10b, all_of(vars)), method = "kernSmooth") |>
   mutate(Sample = "Sample 10b",
          x = datawizard::rescale(x, to=c(1, 5), range=c(0, 1)))
+dens10c <- estimate_density(select(df10c, all_of(vars)), method = "kernSmooth") |>
+  mutate(Sample = "Sample 10c",
+         x = datawizard::rescale(x, to=c(1, 5), range=c(0, 1)))
+dens11a <- estimate_density(select(df11a, all_of(vars)), method = "kernSmooth") |>
+  mutate(Sample = "Sample 11a")
+dens11b <- estimate_density(select(df11b, all_of(vars)), method = "kernSmooth") |>
+  mutate(Sample = "Sample 11b")
 
 
-p1 <- rbind(dens1a, dens1b, dens2, dens3, dens4, dens5, dens6, dens7a, dens7b, dens7c, dens8a, dens8b, dens9, dens10a, dens10b) |>
-  mutate(Sample = fct_relevel(Sample, "Sample 1a", "Sample 1b", "Sample 2", "Sample 3", "Sample 4", "Sample 5", "Sample 6", "Sample 7a", "Sample 7b", "Sample 7c", "Sample 8a", "Sample 8b", "Sample 9", "Sample 10a", "Sample 10b")) |>
+p1 <- rbind(dens1a, dens1b, dens2, dens3, dens4, dens5, dens6, dens7a, dens7b, dens7c, dens8a, dens8b, dens9, dens10a, dens10b, dens10c, dens11a, dens11b) |>
+  mutate(Sample = fct_relevel(Sample, "Sample 1a", "Sample 1b", "Sample 2", "Sample 3", "Sample 4", "Sample 5", "Sample 6", "Sample 7a", "Sample 7b", "Sample 7c", "Sample 8a", "Sample 8b", "Sample 9", "Sample 10a", "Sample 10b", "Sample 10c", "Sample 11a", "Sample 11b")) |>
   # mutate(Dashed = ifelse(Parameter %in% c("Affective_touch", "Blood_Sugar", "Bruise"), TRUE, FALSE)) |> 
   ggplot(aes(x = x, y = y, color = Parameter)) +
   geom_line() +
@@ -493,11 +569,17 @@ data8b <- normalize(select(df8b, all_of(dens8b$Parameter)), range = c(1, 5))
 data9 <- normalize(select(df9, all_of(dens9$Parameter)), range = c(1, 5))
 data10a <- select(df10a, all_of(dens10a$Parameter))
 data10b <- select(df10b, all_of(dens10b$Parameter))
+data10c <- select(df10c, all_of(dens10c$Parameter))
+data11a <- normalize(select(df11a, all_of(dens11a$Parameter)), range = c(1, 5))
+data11b <- na.omit(normalize(select(df11b, all_of(dens11b$Parameter)), range = c(1, 5)))
+row.names(data11b) <- NULL
+
+
 
 data_all <- rbind(
   data1a, data1b, data2, data3, data4, data5, data6, data7a, data7b, data7c,
   mutate(data8a, Tickle = NA), mutate(data8b, Tickle = NA), data9,
-  mutate(data10a, Taste = NA, Cough = NA, Blood_Sugar = NA), data10b
+  mutate(data10a, Taste = NA, Cough = NA, Blood_Sugar = NA),  data10b,  data10c, data11a, data11b
 ) 
 ```
 
@@ -625,6 +707,24 @@ make_correlation(data10a)
 
 ```{r}
 make_correlation(data10b)
+```
+
+#### Sample 10c
+
+```{r}
+make_correlation(data10c)
+```
+
+#### Sample 11a
+
+```{r}
+make_correlation(data11a)
+```
+
+#### Sample 11b
+
+```{r}
+make_correlation(data11b)
 ```
 
 :::
@@ -760,6 +860,31 @@ uva <- EGAnet::UVA(data = data10b, cut.off = 0.3)
 uva
 uva$keep_remove
 ```
+
+#### Sample 10c
+
+```{r}
+uva <- EGAnet::UVA(data = data10c, cut.off = 0.3)
+uva
+uva$keep_remove
+```
+
+#### Sample 11a
+
+```{r}
+uva <- EGAnet::UVA(data = data11a, cut.off = 0.3)
+uva
+uva$keep_remove
+```
+
+#### Sample 11b
+
+```{r}
+uva <- EGAnet::UVA(data = data11b, cut.off = 0.3)
+uva
+uva$keep_remove
+```
+
 
 :::
 
@@ -971,6 +1096,37 @@ egas10b <- make_egas(data10b)
 egas10b$p
 ```
 
+#### Sample 10c
+
+```{r ega10c}
+#| fig-height: 20
+#| fig-width: 12
+
+egas10c <- make_egas(data10c)
+egas10c$p
+```
+
+#### Sample 11a
+
+```{r ega11a}
+#| fig-height: 20
+#| fig-width: 12
+
+egas11a <- make_egas(data11a)
+egas11a$p
+```
+
+#### Sample 11b
+
+```{r ega11c}
+#| fig-height: 20
+#| fig-width: 12
+
+egas11b <- make_egas(data11b)
+egas11b$p
+```
+
+
 :::
 
 ### Structure Stability
@@ -1121,6 +1277,33 @@ patchwork::wrap_plots(lapply(egas10a$egas, plot), nrow = 3)
 patchwork::wrap_plots(lapply(egas10b$egas, plot), nrow = 3)
 ```
 
+#### Sample 10c
+
+```{r}
+#| fig-height: 20
+#| fig-width: 12
+
+patchwork::wrap_plots(lapply(egas10c$egas, plot), nrow = 3)
+```
+
+#### Sample 11a
+
+```{r}
+#| fig-height: 20
+#| fig-width: 12
+
+patchwork::wrap_plots(lapply(egas11a$egas, plot), nrow = 3)
+```
+
+#### Sample 11b
+
+```{r}
+#| fig-height: 20
+#| fig-width: 12
+
+patchwork::wrap_plots(lapply(egas11b$egas, plot), nrow = 3)
+```
+
 :::
 
 
@@ -1151,6 +1334,10 @@ ega_scores_8b <- get_scores(data8b, ega)
 ega_scores_9 <- get_scores(data9, ega)
 ega_scores_10a <- get_scores(data10a, ega)
 ega_scores_10b <- get_scores(data10b, ega)
+ega_scores_10c <- get_scores(data10c, ega)
+ega_scores_11a <- get_scores(data11a, ega)
+ega_scores_11b <- na.omit(get_scores(data11b, ega)) # remove two rows with NAS
+row.names(ega_scores_11b) <- NULL
 ```
 
 ## Factor Analysis
@@ -1305,6 +1492,32 @@ plot(n)
 knitr::kable(as.data.frame(n)[n$n_Factors %in% c(1, 3, 4, 5), ], row.names = FALSE)
 ```
 
+#### Sample 10c
+
+```{r}
+n <- parameters::n_factors(data10c, n_max = 12)
+
+plot(n)
+knitr::kable(as.data.frame(n)[n$n_Factors %in% c(1, 3, 4, 5), ], row.names = FALSE)
+```
+
+#### Sample 11a
+
+```{r}
+n <- parameters::n_factors(data11a, n_max = 12)
+
+plot(n)
+knitr::kable(as.data.frame(n)[n$n_Factors %in% c(1, 3, 4, 5), ], row.names = FALSE)
+```
+
+#### Sample 11b
+
+```{r}
+n <- parameters::n_factors(data11b, n_max = 12)
+
+plot(n)
+knitr::kable(as.data.frame(n)[n$n_Factors %in% c(1, 3, 4, 5), ], row.names = FALSE)
+```
 :::
 
 
@@ -1486,6 +1699,39 @@ display(efa4)
 #| fig-height: 10
 
 efa4 <- parameters::factor_analysis(data10b, n = 4, rotation = "oblimin", sort = TRUE)
+plot(efa4)
+
+display(efa4)
+```
+
+#### Sample 10c
+
+```{r}
+#| fig-height: 10
+
+efa4 <- parameters::factor_analysis(data10c, n = 4, rotation = "oblimin", sort = TRUE)
+plot(efa4)
+
+display(efa4)
+```
+
+#### Sample 11a
+
+```{r}
+#| fig-height: 10
+
+efa4 <- parameters::factor_analysis(data11a, n = 4, rotation = "oblimin", sort = TRUE)
+plot(efa4)
+
+display(efa4)
+```
+
+#### Sample 11b
+
+```{r}
+#| fig-height: 10
+
+efa4 <- parameters::factor_analysis(data11b, n = 4, rotation = "oblimin", sort = TRUE)
 plot(efa4)
 
 display(efa4)
@@ -1739,6 +1985,33 @@ display(compare_mods(data10b))
 
 ```
 
+#### Sample 10c 
+
+```{r}
+#| warning: false
+
+display(compare_mods(data10c))
+
+```
+
+#### Sample 11a 
+
+```{r}
+#| warning: false
+
+display(compare_mods(data11a))
+
+```
+
+#### Sample 11b 
+
+```{r}
+#| warning: false
+
+display(compare_mods(data11b))
+
+```
+
 :::
 
 
@@ -1900,6 +2173,24 @@ display(compare_mods_h(data10a))
 display(compare_mods_h(data10b))
 ```
 
+#### Sample 10c 
+
+```{r}
+display(compare_mods_h(data10c))
+```
+
+#### Sample 11a 
+
+```{r}
+display(compare_mods_h(data11a))
+```
+
+#### Sample 11b 
+
+```{r}
+display(compare_mods_h(data11b))
+```
+
 :::
 
 
@@ -1940,7 +2231,13 @@ rbind(
   performance::performance(lavaan::cfa(str_remove(m7, fixed("\nCoughSneeze =~ Cough + Sneeze")), data = data10a), metrics = c("Chi2", "RMSEA", "CFI", "SRMR")) |>
     mutate(Sample = "Sample 10a"),
   performance::performance(update(m7_all, data = data10b), metrics = c("Chi2", "RMSEA", "CFI", "SRMR")) |>
-    mutate(Sample = "Sample 10b")
+    mutate(Sample = "Sample 10b"),
+  performance::performance(update(m7_all, data = data10c), metrics = c("Chi2", "RMSEA", "CFI", "SRMR")) |>
+    mutate(Sample = "Sample 10c"),
+  performance::performance(update(m7_all, data = data11a), metrics = c("Chi2", "RMSEA", "CFI", "SRMR")) |>
+    mutate(Sample = "Sample 11a"),
+  performance::performance(update(m7_all, data = data11b), metrics = c("Chi2", "RMSEA", "CFI", "SRMR")) |>
+    mutate(Sample = "Sample 11b")
 ) |>
   display()
 ```
@@ -2023,7 +2320,16 @@ scores <- list(
     mutate(Sample = "Sample 10a", CFA_CoughSneeze = NA),
   sample10b = cbind(ega_scores_10b, data_addprefix(as.data.frame(predict(m7_all, newdata=data10b)), "CFA_")) |>
     add_empirical(data10b) |> 
-    mutate(Sample = "Sample 10b")
+    mutate(Sample = "Sample 10b"),
+  sample10c = cbind(ega_scores_10c, data_addprefix(as.data.frame(predict(m7_all, newdata=data10c)), "CFA_")) |>
+    add_empirical(data10c) |> 
+    mutate(Sample = "Sample 10c"),
+  sample11a = cbind(ega_scores_11a, data_addprefix(as.data.frame(predict(m7_all, newdata=data11a)), "CFA_")) |>
+    add_empirical(data11a) |> 
+    mutate(Sample = "Sample 11a"),
+  sample11b = cbind(ega_scores_11b, data_addprefix(as.data.frame(predict(m7_all, newdata=data11b)), "CFA_")) |>
+    add_empirical(data11b) |> 
+    mutate(Sample = "Sample 11b")
 )
 
 save(scores, file = "../data/scores.RData")
